# thesis

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Sample_B/: 2_EDA.py  5_PCA.ipynb  random.ipynb
Sample_B/4_6_RFE/: 4_without_alt.py  6_pca.py
Sample_B/9_result_analysis/: feature_importance_analysis.ipynb  performance analysis.ipynb
ablation_study/: load_final_df.py
ablation_study/result_analysis/: discretisation.ipynb  feature_importance_analysis.ipynb  performance analysis.ipynb
ablation_study_zero_image/result_analysis/: discretisation.ipynb
docs/: metadata.xlsx  metadata.yaml  metadata_GRIP4_AttributeDescription.xlsx
notebooks/: example.ipynb  metadata.ipynb  per_comune_utils.py  random.ipynb  setup.txt  setup_for_images.ipynb  setup_notebooks.txt  utils.py  weather_forecast_utils.py
notebooks/data_gathering/: agricoltura.ipynb  istruzione_occupazione.ipynb  map.ipynb  meteo.ipynb  popolazione.ipynb  redditi.ipynb
notebooks/data_import/: agricultural_land_usage.ipynb  altimetric_zone.ipynb  ifc.ipynb  (+9 more)
only_human_study/: utils.py
outputs/: README.md
pca_study/: utils.py
rekriging_target/: extract_weather.ipynb  negatives_grid.ipynb  negatives_grid.py  random.ipynb  target_kriging.ipynb  weather.ipynb
resampling/: 1_create_sample.ipynb  3_preprocessing.ipynb  6_final_feature_selection.ipynb  7_final_feature_selection.ipynb  7_load_final_df.py  8_fine_tuning.py  9_fine_tuning.py  random.ipynb
resources/: README.md
src/: per_comune_utils.py  utils.py  weather_forecast_utils.py
tests/: PointDataLoader.ipynb  results_analysis.ipynb  test_base.py
(+387 files in other folders)
